--- a/ui/src/app/components/account/account-view/account-view.component.html
+++ b/ui/src/app/components/account/account-view/account-view.component.html
@@ -17,7 +17,7 @@
         <a>Log out</a>
       </button>
       <button class="btnz update-btn">
-        <a>Edit(cur not working- to be made working)</a>
+        <a (click)="goToEditAccount()">Edit</a>
       </button>
     </div>
   </div>
