--- a/ui/src/app/components/account/edit-account/edit-account.component.css
+++ b/ui/src/app/components/account/edit-account/edit-account.component.css
@@ -1,38 +1,41 @@
-.container-form{
-  padding-top: 20px;
-  padding-right: 10px;
-  padding-left: 10px;
-}
-.text-wrapper{
-  overflow: hidden;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background:rgba(255,255,255,0.8);
-  padding-right: 10px;
-  padding-left: 10px;
-  margin-top: 60px;
-  padding-bottom: 20px;
-}
-.site-wrapper{
-  color: black;
-  background-image: url("https://lovefoodhatewaste.ca/wp-content/uploads/2018/06/FoodBackground.jpg");
-  background-repeat: no-repeat;
-  background-color: black;
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
-  height: 100vh;
+.modal-content {
   position: relative;
-  font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
-  font-weight: bold;
+  background-color: #ffffff;
+  border: 1px solid #999999;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0;
+  outline: none;
+  -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
+  background-clip: padding-box;
 }
-.row-btn{
-  text-align: center;
-  padding-bottom: 10px;
+.modal-header {
+  border-bottom: 1px solid #48a4ac;
+  background: #61bdc5;
+  min-height: 16.4286px;
+  padding: 10px 15px;
 }
-.form-control{
-  width: 450px; height: 50px; border: 1px solid #999999; padding: 5px;
+.close {
+  float: right;
+  font-size: 21px;
+  font-weight: 700;
+  line-height: 1;
+  color: #000;
+  text-shadow: 0 1px 0 #fff;
+  opacity: .2;
+  filter: alpha(opacity=20);
+}
+.modal-body {
+  position: relative;
+  padding: 20px;
+}
+.modal-footer {
+  padding: 19px 20px 20px;
+  margin-top: 0;
+  text-align: right;
+  border-top: 1px solid #e5e5e5;
+}
+.container{
+  margin-left: 250px;
+  margin-top: 150px;
 }
