Fixed organization of backend project

--- a/ui/src/app/components/account/account-view-emp/account-view-emp.component.html
+++ b/ui/src/app/components/account/account-view-emp/account-view-emp.component.html
@@ -41,7 +41,7 @@
       </form>
     </div>
     <button class="btnz update-btn">
-      <a (click)="seeSalesReport()">See Sales Report for this year</a>
+      <a (click)="seeSalesReport()">See Sales Report</a>
     </button>
   </div>
 </div>
