need to fix frontend with exceptions

--- a/ui/src/app/components/product/product-list-sale/product-list-sale.component.html
+++ b/ui/src/app/components/product/product-list-sale/product-list-sale.component.html
@@ -9,7 +9,7 @@
       <div class="ibox">
         <div class="ibox-content product-box" *ngFor="let product of productList">
           <div class="product-imitation">
-            <img src="https://cdn3.iconfinder.com/data/icons/cat-pattern-colored/94/cat17-512.png" style="height: 150px; width: 150px">
+            <img src= "https://c8.alamy.com/comp/MAFC9W/cheerful-cat-holds-its-front-paws-for-sale-funny-cartoon-animal-character-cheerful-pet-for-web-icons-and-shirt-vector-illustration-MAFC9W.jpg" style="height: 150px; width: 150px">
           </div>
           <div class="product-desc">
                     <span class="product-price">
