Fixed exceptions for frontend.

--- a/ui/src/app/components/campaign/campagin-list/campagin-list.component.html
+++ b/ui/src/app/components/campaign/campagin-list/campagin-list.component.html
@@ -4,6 +4,8 @@
     <div class="title" style="text-align:center">
       <h1>
         {{ title }}
+        <br>
+        {{validMessage}}
       </h1>
     </div>
     <button type="submit" class="btn btn-primary" [routerLink]="['/campaign-create']" >Create Campaign</button><br>
