--- a/ui/src/app/components/campaign/edit-campaign/edit-campaign.component.html
+++ b/ui/src/app/components/campaign/edit-campaign/edit-campaign.component.html
@@ -4,6 +4,8 @@
     <div class="title" style="text-align:center">
       <h1>
         Edit Campaign
+        <br>
+        {{validMessage}}
       </h1>
     </div>
     <div class="container-form">
