--- a/ui/src/app/components/campaign/edit-product-in-campaign/edit-product-in-campaign.component.html
+++ b/ui/src/app/components/campaign/edit-product-in-campaign/edit-product-in-campaign.component.html
@@ -3,7 +3,9 @@
     <br>
     <div class="title" style="text-align:center">
       <h1>
-        Add Product To Campaign;
+        Edit Product To Campaign;
+        <br>
+        {{validMessage}}
       </h1>
     </div>
     <div class="container-form">
