--- a/ui/src/app/components/campaign/see-products-in-campaign/see-products-in-campaign.component.html
+++ b/ui/src/app/components/campaign/see-products-in-campaign/see-products-in-campaign.component.html
@@ -4,6 +4,8 @@
     <div class="title" style="text-align:center">
       <h1>
         Products In Campaign
+        <br>
+        {{validMessage}}
       </h1>
     </div>
     <br>(click on campaign name to edit)
