--- a/ui/src/app/components/checkout/chekout/checkout.component.html
+++ b/ui/src/app/components/checkout/chekout/checkout.component.html
@@ -2,7 +2,7 @@
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
-
+<h1>{{validMessage}}</h1>
 <div class="container wrapper" >
   <div class="row cart-head">
     <div class="container">
