--- a/ui/src/app/components/product/product-list-keyword/product-list-keyword.component.html
+++ b/ui/src/app/components/product/product-list-keyword/product-list-keyword.component.html
@@ -2,6 +2,8 @@
 
 <div class="title">
   <h1>Keyword: {{keyword}}</h1>
+  <br>
+  {{validMessage}}
 </div>
 <div class="container" *ngIf="productList && productList.length">
   <div class="row">
