--- a/ui/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/ui/src/app/components/shopping-cart/shopping-cart.component.html
@@ -2,7 +2,12 @@
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
-
+<div class="title" style="text-align:center">
+  <h1>
+    <br>
+    {{validMessage}}
+  </h1>
+</div>
 <div class="container" *ngIf="cartList && cartList.length">
   <div class="row">
     <div class="col-xs-8">
