--- a/ui/src/app/components/campaign/create-campaign/create-campaign.component.html
+++ b/ui/src/app/components/campaign/create-campaign/create-campaign.component.html
@@ -4,6 +4,8 @@
     <div class="title" style="text-align:center">
       <h1>
         Create Campaign
+        <br>
+        {{validMessage}}
       </h1>
     </div>
     <div class="container-form">
