--- a/ui/src/app/components/product/edit-product/edit-product.component.html
+++ b/ui/src/app/components/product/edit-product/edit-product.component.html
@@ -4,13 +4,12 @@
     <div class="title" style="text-align:center">
       <h1>
         Edit Product
+        <br>
+        {{validMessage}}
       </h1>
     </div>
     <div class="container-form">
       <form [formGroup]="productFormGroup" (ngSubmit)="submitRegistration()" novalidate>
-        <div *ngIf="validMessage != ''">
-          <h3 class="has-info">{{validMessage}}</h3>
-        </div>
         <div class="form-group">
           <label>Product Name</label>
           <input type="text" class="form-control" formControlName="name" required autofocus value="{{product.name}}"/>
